--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "engin-calc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/lmsnsk/engin-calc",
+  "homepage": "https://lmsnsk.github.io/engin-calc/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
